@@ -909,7 +909,7 @@ function rcube_charset_convert($str, $from, $to=NULL)
   // convert string to UTF-8
   if ($from=='UTF-7')
     $str = rcube_charset_convert(UTF7DecodeString($str), 'ISO-8859-1');
-  else if ($from=='ISO-8859-1' && function_exists('utf8_encode'))
+  else if (($from=='ISO-8859-1') && function_exists('utf8_encode'))
     $str = utf8_encode($str);
   else if ($from!='UTF-8')
     {
@@ -919,7 +919,7 @@ function rcube_charset_convert($str, $from, $to=NULL)
 
   // encode string for output
   if ($to=='UTF-7')
-    return UTF7EncodeString($str);
+    return UTF7EncodeString(rcube_charset_convert($str, 'UTF-8', 'ISO-8859-1'));
   else if ($to=='ISO-8859-1' && function_exists('utf8_decode'))
     return utf8_decode($str);
   else if ($to!='UTF-8')
